# pyloid-chat-demo

./: .gitignore  README.md  app.py  app.spec  chatbot.py  config.py  justfile  pyproject.toml
.github/workflows/: release.yml
